Fix bugs with overflow in slider

--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -84,12 +84,25 @@ div.product-add {
 
 .carousel-inner {
     height: 435px;
+    display: inline-block;
 }
 
+#upload-img {
+    cursor: pointer;
+}
+
+.item {
+   position: relative;
+   height: inherit;
+}
 
 .item img {
     max-width: 100%;
     max-height: 100%;
-    margin: 0 auto;
+    position: absolute;
+    top: 0;  
+    bottom: 0;  
+    left: 0;  
+    right: 0;  
+    margin: auto;
 }
-
